--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -38,7 +38,7 @@ jobs:
         run: bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
-        run: bin/rake rspec
+        run: bin/rake spec
       # Add Rubocop
       - name: Run Rubocop
         run: bin/bundle exec rubocop
