--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,8 +9,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    type:
-      - open
+    branches: 
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -43,20 +42,3 @@ jobs:
       # Add Rubocop
       - name: Run Rubocop
         run: bin/bundle exec rubocop
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
-        with:
-          bundler-cache: true
-      # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
