--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -36,6 +36,8 @@ jobs:
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:schema:load
+      - name: Set up webpacker
+        run: bin/rails webpacker:install 
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake spec
