--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -41,9 +41,9 @@ jobs:
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake spec
-      - name: Run Rubocop
+      - name: rubocop
         uses: reviewdog/action-rubocop@v2
         with:
           rubocop_version: gemfile
           rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile
-          reporter: github-pr-review # Default is github-pr-check
+          reporter: github-pr-review
