--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,16 +1,7 @@
 AllCops:
   NewCops: enable
   Exclude:
-    - "db/schema.rb"
-    - "Gemfile"
-    - "lib/tasks/*.rake"
-    - "bin/*"
-    - "config/puma.rb"
-    - "config/spring.rb"
-    - "config/environments/development.rb"
-    - "config/environments/production.rb"
-    - "spec/spec_helper.rb"
-    - "vendor/"
+    - "vendor/*/**"
 
 Style/Documentation:
   Enabled: false
