--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   NewCops: enable
   Exclude:
     - "vendor/*/**"
-    - vendor/bundle/**/*
+    - "vendor/bundle/**/*"
 
 Style/Documentation:
   Enabled: false
