--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -5,7 +5,10 @@
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
 name: "Ruby on Rails CI"
-on: [pull_request]
+on: 
+  pull_request:
+    branches:
+    - main
 jobs:
   test:
     runs-on: ubuntu-latest
