--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -5,10 +5,7 @@
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
 name: "Ruby on Rails CI"
-on: 
-  pull_request:
-    branches:
-    - main
+on: [pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
